# DarkHelp

./: .gitignore  CM_definitions.cmake  CM_dependencies.cmake  CM_package.cmake  CM_source.cmake  CM_version.cmake  CMakeLists.txt  DarkHelp.cpp  DarkHelp.hpp  build_linux.sh  build_windows.cmd  build_windows_debug.cmd  license.txt  main.cpp  readme.md  readme.txt  readme_linux.txt  readme_windows.txt  rebuild_windows_debug.cmd  version.txt
.github/: FUNDING.yml
doxygen/: 01_mainpage.dox  02_summary.dox  04_building_darkhelp.dox  05_darkhelp_cli.dox  Doxyfile.in
example_project/: CMakeLists.txt  example.cpp  readme.txt
src/: CMakeLists.txt  DarkHelp.cpp  DarkHelp.hpp  main.cpp
src-apps/: CMakeLists.txt  display_single_image.cpp  display_single_image_custom_settings.cpp  display_single_image_snapping.cpp  display_using_bundle.cpp  process_many_images_on_threads.cpp  process_single_image.cpp  process_using_bundle_and_dhthreads.cpp  process_video_webcam.cpp  readme.md  resize_corners.cpp  rotate_images.cpp  save_webcam_to_video.cpp  using_c_api.cpp  video_display_realtime.cpp  video_object_counter.cpp
src-cam/: CMakeLists.txt  Cam.cpp  CamOptions.cpp  CamOptions.hpp  save_webcam_to_video.cpp
src-doc/: 01_mainpage.dox  02_summary.dox  03_changelist.dox  04_building_darkhelp.dox  05_darkhelp_api.dox  05_darkhelp_c_api.dox  05_darkhelp_python_api.dox  05_darkhelp_tool.dox  06_darkhelp_tool.dox  06_shell_script.dox  07_parms.dox  08_darkhelp_server.dox  08_darkhelp_webcam.dox  08_shell_script.dox  09_tiling.dox  CMakeLists.txt  Doxyfile.in
src-lib/: CMakeLists.txt  DarkHelp.cpp  DarkHelp.hpp  DarkHelpConfig.cpp  DarkHelpConfig.hpp  DarkHelpNN.cpp  DarkHelpNN.hpp  DarkHelpPositionTracker.cpp  DarkHelpPositionTracker.hpp  DarkHelpPredictionResult.cpp  DarkHelpPredictionResult.hpp  DarkHelpThreads.cpp  DarkHelpThreads.hpp  DarkHelpUtils.cpp  DarkHelpUtils.hpp  DarkHelp_C_API.cpp  DarkHelp_C_API.h
src-python/: DarkHelp.py  example.py
src-tool/: CMakeLists.txt  DarkHelp.rc  DarkHelpCli.cpp  DarkHelpCombine.cpp  DarkHelpServer.cpp  filesystem.hpp  json.hpp  main.cpp
